<resources>
    <string name="app_name">SehatVibes</string>
    <string name="sudahPunyaAkun"><font color="#263238">Sudah punya akun?</font> <font color="#0D4715">Login</font></string>
    <string name="belumPunyaAkun"><font color="#263238">Belum punya akun?</font> <font color="#0D4715">Sign in</font></string>
    <string name="registerTextView">Register</string>
    <string name="loginTextView">Login</string>
    <string name="usernameEditText">Username</string>
    <string name="nameEditText">Name</string>
    <string name="weightEditText">Weight</string>
    <string name="passwordEditText">Password</string>
    <string name="confirmPwdEditText">Confirm Password</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="wlcmTv">Hi, Fauzi!</string>
</resources>