<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#F5F7FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="24dp"
        android:paddingTop="24dp">
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_logo_auth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTextView"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#263238"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"/>

        <EditText
            android:id="@+id/etUsrnmRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameEditText"
            android:background="@drawable/edit_text_background"
            android:textColor="#263238"
            android:textColorHint="#90A4AE"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameEditText"
            android:background="@drawable/edit_text_background"
            android:textColor="#263238"
            android:textColorHint="#90A4AE"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightEditText"
            android:inputType="number"
            android:background="@drawable/edit_text_background"
            android:textColor="#263238"
            android:textColorHint="#90A4AE"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etPwRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordEditText"
                android:background="@drawable/edit_text_background"
                android:inputType="textPassword"
                android:textColor="#263238"
                android:textColorHint="#90A4AE"
                android:padding="12dp"
                android:paddingEnd="48dp"/>

            <ImageView
                android:id="@+id/ivTogglePw"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_eye_off"
                android:clickable="true"
                android:focusable="true"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etConfirmPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPwdEditText"
                android:background="@drawable/edit_text_background"
                android:inputType="textPassword"
                android:textColor="#263238"
                android:textColorHint="#90A4AE"
                android:padding="12dp"
                android:paddingEnd="48dp"/>

            <ImageView
                android:id="@+id/ivToggleConfirmPw"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_eye_off"
                android:clickable="true"
                android:focusable="true"/>

        </FrameLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:backgroundTint="#0D4715"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudahPunyaAkun"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</ScrollView>